--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CalculosMatematicosAPP</string>
+    <string name="txtNum1"></string>
+    <string name="txtNum2"></string>
+    <string name="txtNum3">Resultado:</string>
 </resources>
